// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs matches snapshot (global) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: transparent;
  font-weight: var(--font-semi-bold);
}

.c7:hover {
  color: #000000;
}

.c7::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  bottom: 0;
}

.c7 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c7::after {
  background-color: #006296;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c10:hover {
  color: #000000;
}

.c10::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  bottom: 0;
}

.c10 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c10:active {
  color: #1B1C1E;
  font-weight: var(--font-semi-bold);
}

.c10:active::after {
  background-color: #012639 !important;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c9:hover .c6::after {
  background-color: #DBDEE1;
  color: #000000;
}

.c8::after {
  content: attr(data-content);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  visibility: hidden;
}

.c12 {
  border-top: none;
}

.c12 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c12:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  background: #FFFFFF;
  box-sizing: content-box;
  height: var(--size-2halfx);
  padding-top: var(--spacing-2x);
  position: relative;
}

.c0::before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-half);
  height: var(--size-2halfx);
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  white-space: nowrap;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: var(--size-2halfx);
  min-height: auto;
  position: absolute;
  z-index: 1;
  box-shadow: 3px 0px 3px -2px rgba(0,0,0,0.1);
  left: 0;
  padding: 0 var(--spacing-1x) 0 var(--spacing-2x);
}

.c3:hover {
  background: #DBDEE1;
}

.c3.hidden {
  display: none;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: var(--size-2halfx);
  min-height: auto;
  position: absolute;
  z-index: 1;
  box-shadow: -3px 0px 3px -2px rgba(0,0,0,0.1);
  padding: 0 var(--spacing-2x) 0 var(--spacing-1x);
  right: 0;
}

.c11:hover {
  background: #DBDEE1;
}

.c11.hidden {
  display: none;
}

<div
  class=""
>
  <div
    class="c0"
  >
    <button
      aria-hidden="true"
      class="c1 c2 c3 hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
    </button>
    <div
      aria-label="tabs label"
      class="c4"
      role="tablist"
    >
      <div
        class="c5"
        data-testid="tab-1"
      >
        <button
          aria-controls="tab-1-panel"
          aria-selected="true"
          class="c6 c7"
          data-testid="tab-1-button"
          id="tab-1"
          role="tab"
          type="button"
        >
          <span
            class="c8"
            data-content="button 1"
            data-testid="tab-1-text"
          >
            button 1
          </span>
        </button>
      </div>
      <div
        class="c9"
        data-testid="tab-2"
      >
        <button
          aria-controls="tab-2-panel"
          aria-selected="false"
          class="c6 c10"
          data-testid="tab-2-button"
          id="tab-2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="c8"
            data-content="button 2"
            data-testid="tab-2-text"
          >
            button 2
          </span>
        </button>
      </div>
    </div>
    <button
      aria-hidden="true"
      class="c1 c2 c11 hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c12"
    id="tab-1-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c12"
    hidden=""
    id="tab-2-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Tabs matches snapshot (mobile) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c3 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #FFFFFF;
  font-weight: var(--font-semi-bold);
}

.c8:hover {
  color: #000000;
}

.c8::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  top: 0;
}

.c8 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8::after {
  background-color: #006296;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c11:hover {
  color: #000000;
}

.c11::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  top: 0;
}

.c11 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c11:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c11:active {
  color: #1B1C1E;
  font-weight: var(--font-semi-bold);
}

.c11:active::after {
  background-color: #012639 !important;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c10:hover .c7::after {
  background-color: #DBDEE1;
  color: #000000;
}

.c9::after {
  content: attr(data-content);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  visibility: hidden;
}

.c13 {
  border-top: none;
}

.c13 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c13:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  background: #FFFFFF;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 1px 4px 0 rgb(0 0 0 / 0.2);
}

.c1 {
  background: #F1F2F2;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  box-sizing: content-box;
  height: var(--size-2halfx);
  position: relative;
}

.c1::before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  width: 100%;
}

.c5 {
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-half);
  height: var(--size-2halfx);
  overflow-x: auto;
  overflow-y: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  white-space: nowrap;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: var(--size-2halfx);
  min-height: auto;
  position: absolute;
  z-index: 1;
  box-shadow: 3px 0px 3px -2px rgba(0,0,0,0.1);
  left: 0;
  padding: 0 var(--spacing-1x) 0 var(--spacing-2x);
  border-radius: var(--border-radius-2x) 0 0 0;
}

.c4:hover {
  background: #DBDEE1;
}

.c4.hidden {
  display: none;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: var(--size-2halfx);
  min-height: auto;
  position: absolute;
  z-index: 1;
  box-shadow: -3px 0px 3px -2px rgba(0,0,0,0.1);
  padding: 0 var(--spacing-2x) 0 var(--spacing-1x);
  right: 0;
  border-radius: 0 var(--border-radius-2x) 0 0;
}

.c12:hover {
  background: #DBDEE1;
}

.c12.hidden {
  display: none;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <button
      aria-hidden="true"
      class="c2 c3 c4 hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
    </button>
    <div
      aria-label="tabs label"
      class="c5"
      role="tablist"
    >
      <div
        class="c6"
        data-testid="tab-1"
      >
        <button
          aria-controls="tab-1-panel"
          aria-selected="true"
          class="c7 c8"
          data-testid="tab-1-button"
          id="tab-1"
          role="tab"
          type="button"
        >
          <span
            class="c9"
            data-content="button 1"
            data-testid="tab-1-text"
          >
            button 1
          </span>
        </button>
      </div>
      <div
        class="c10"
        data-testid="tab-2"
      >
        <button
          aria-controls="tab-2-panel"
          aria-selected="false"
          class="c7 c11"
          data-testid="tab-2-button"
          id="tab-2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="c9"
            data-content="button 2"
            data-testid="tab-2-text"
          >
            button 2
          </span>
        </button>
      </div>
    </div>
    <button
      aria-hidden="true"
      class="c2 c3 c12 hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c13"
    id="tab-1-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c13"
    hidden=""
    id="tab-2-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Tabs matches snapshot 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c3 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #FFFFFF;
  font-weight: var(--font-semi-bold);
}

.c8:hover {
  color: #000000;
}

.c8::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  top: 0;
}

.c8 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8::after {
  background-color: #006296;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c11:hover {
  color: #000000;
}

.c11::after {
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
  top: 0;
}

.c11 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c11:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c11:active {
  color: #1B1C1E;
  font-weight: var(--font-semi-bold);
}

.c11:active::after {
  background-color: #012639 !important;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c10:hover .c7::after {
  background-color: #DBDEE1;
  color: #000000;
}

.c9::after {
  content: attr(data-content);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  visibility: hidden;
}

.c13 {
  border-top: none;
}

.c13 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c13:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  background: #FFFFFF;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 1px 4px 0 rgb(0 0 0 / 0.2);
}

.c1 {
  background: #F1F2F2;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  box-sizing: content-box;
  height: var(--size-2halfx);
  position: relative;
}

.c1::before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  width: 100%;
}

.c5 {
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-half);
  height: var(--size-2halfx);
  overflow-x: auto;
  overflow-y: hidden;
  padding: 0 var(--spacing-2x);
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  white-space: nowrap;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: var(--size-2halfx);
  min-height: auto;
  position: absolute;
  z-index: 1;
  box-shadow: 3px 0px 3px -2px rgba(0,0,0,0.1);
  left: 0;
  padding: 0 var(--spacing-1x) 0 var(--spacing-2x);
  border-radius: var(--border-radius-2x) 0 0 0;
}

.c4:hover {
  background: #DBDEE1;
}

.c4.hidden {
  display: none;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: var(--size-2halfx);
  min-height: auto;
  position: absolute;
  z-index: 1;
  box-shadow: -3px 0px 3px -2px rgba(0,0,0,0.1);
  padding: 0 var(--spacing-2x) 0 var(--spacing-1x);
  right: 0;
  border-radius: 0 var(--border-radius-2x) 0 0;
}

.c12:hover {
  background: #DBDEE1;
}

.c12.hidden {
  display: none;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <button
      aria-hidden="true"
      class="c2 c3 c4 hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
    </button>
    <div
      aria-label="tabs label"
      class="c5"
      role="tablist"
    >
      <div
        class="c6"
        data-testid="tab-1"
      >
        <button
          aria-controls="tab-1-panel"
          aria-selected="true"
          class="c7 c8"
          data-testid="tab-1-button"
          id="tab-1"
          role="tab"
          type="button"
        >
          <span
            class="c9"
            data-content="button 1"
            data-testid="tab-1-text"
          >
            button 1
          </span>
        </button>
      </div>
      <div
        class="c10"
        data-testid="tab-2"
      >
        <button
          aria-controls="tab-2-panel"
          aria-selected="false"
          class="c7 c11"
          data-testid="tab-2-button"
          id="tab-2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="c9"
            data-content="button 2"
            data-testid="tab-2-text"
          >
            button 2
          </span>
        </button>
      </div>
    </div>
    <button
      aria-hidden="true"
      class="c2 c3 c12 hidden"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c13"
    id="tab-1-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c13"
    hidden=""
    id="tab-2-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;
